--- a/dashboard.html
+++ b/dashboard.html
@@ -25,21 +25,21 @@
 
 <body>
 	<div class="wrapper ">
-		<div class="sidebar" data-color="purple" data-background-color="white">
+		<div id="sidebar" class="sidebar" data-color="" data-background-color="">
 			<!--
       Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
       Tip 2: you can also add an image using data-image tag
   -->
-			<div class="logo">
-				<a href="#" class="simple-text logo-mini">
+			<div class="logo" id="logo" data-color="" data-background-color="">
+				<a href="#" class="simple-text logo-normal">
 					Defect Tracker
 				</a>
 				<a href="#" class="simple-text logo-normal">
 					Hi, Username
 				</a>
 			</div>
-			<div class="sidebar-wrapper">
+			<div class="sidebar-wrapper" id="sidebar-wrapper">
 				<ul class="nav">
 					<li class="nav-item active">
 						<a class="nav-link" href="#0">
@@ -49,15 +49,15 @@
 					</li>
 					<!-- your sidebar here -->
 					<li class="nav-item">
-						<a class="nav-link" href="#0">
-							<i class="material-icons">account_box</i>
-							<p>Profile</p>
+						<a class="nav-link" href="adddefects.html">
+							<i class="material-icons">bug_report</i>
+							<p>Add Defect</p>
 						</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#0">
-							<i class="material-icons">bug_report</i>
-							<p>Add Defect</p>
+							<i class="material-icons">account_box</i>
+							<p>Profile</p>
 						</a>
 					</li>
 				</ul>
@@ -65,10 +65,10 @@
 		</div>
 		<div class="main-panel">
 			<!-- Navbar -->
-			<nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+			<nav class="navbar navbar-expand-lg navbar-absolute fixed-top primary-color">
 				<div class="container-fluid">
 					<div class="navbar-wrapper">
-						<a class="navbar-brand" href="#pablo">Dashboard</a>
+						<a class="navbar-brand" style="color: #FFF" href="#pablo">Defect Tracker System</a>
 					</div>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index"
 						aria-expanded="false" aria-label="Toggle navigation">
@@ -80,19 +80,20 @@
 					<div class="collapse navbar-collapse justify-content-end">
 						<ul class="navbar-nav">
 							<li class="nav-item dropdown">
-									<a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<i class="material-icons">notifications</i>
-									<span class="notification">5</span>
+								<a class="nav-link" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
+									aria-haspopup="true" aria-expanded="false">
+									<i id="bell" class="far fa-bell fa-2x"></i>
+									<!-- <i class="material-icons">notifications</i> -->
+									<span class="notification">4</span>
 									<p class="d-lg-none d-md-block">
 										Some Actions
 									</p>
 								</a>
 								<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-									<a class="dropdown-item" href="#">Mike John responded to your email</a>
-									<a class="dropdown-item" href="#">You have 5 new tasks</a>
-									<a class="dropdown-item" href="#">You're now friend with Andrew</a>
-									<a class="dropdown-item" href="#">Another Notification</a>
-									<a class="dropdown-item" href="#">Another One</a>
+									<a class="dropdown-item" href="#">A defect occured in Login Module</a>
+									<a class="dropdown-item" href="#">Notification example</a>
+									<a class="dropdown-item" href="#">Hi, this is a notification</a>
+									<a class="dropdown-item" href="#">Check the defect in your landing page</a>
 								</div>
 							</li>
 							<!-- your navbar here -->
@@ -112,7 +113,7 @@
 								<div class="card card-cascade cascading-admin-card">
 									<!-- Card Data -->
 									<div class="admin-up">
-										<i class="fas fa-bug primary-color mr-3 z-depth-2"></i>
+										<i class="fas fa-bug cyan mr-3 z-depth-2"></i>
 										<div class="data">
 											<p class="text-uppercase">Total Defects</p>
 											<h4 class="font-weight-bold dark-grey-text">10</h4>
@@ -137,7 +138,7 @@
 								<div class="card card-cascade cascading-admin-card">
 									<!-- Card Data -->
 									<div class="admin-up">
-										<i class="fas fa-check-square warning-color mr-3 z-depth-2"></i>
+										<i class="fas fa-check-square bg-success mr-3 z-depth-2"></i>
 										<div class="data">
 											<p class="text-uppercase">Completed</p>
 											<h4 class="font-weight-bold dark-grey-text">6</h4>
@@ -162,7 +163,7 @@
 								<div class="card card-cascade cascading-admin-card">
 									<!-- Card Data -->
 									<div class="admin-up">
-										<i class="fas fa-times-circle light-blue lighten-1 mr-3 z-depth-2"></i>
+										<i class="fas fa-times-circle red lighten-1 mr-3 z-depth-2"></i>
 										<div class="data">
 											<p class="text-uppercase">Pending</p>
 											<h4 class="font-weight-bold dark-grey-text">4</h4>
@@ -221,6 +222,19 @@
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
 	<script src="js/sidebar.js"></script>
+
+
+	
+
+	<!--  Notifications Plugin    -->
+	<script src="assets/js/plugins/bootstrap-notify.js"></script>
+
+	<script src="assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+
+	<!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+	<script src="assets/js/material-dashboard.js?v=2.1.1" type="text/javascript"></script>
+
+
 	<!-- Piechart -->
 	<script>
 		//doughnut1
@@ -257,6 +271,11 @@
 			}
 		});
 	</script>
+
+		<!--   Core JS Files   -->
+		<script src="assets/js/core/jquery.min.js"></script>
+		<script src="assets/js/core/popper.min.js"></script>
+		<script src="assets/js/core/bootstrap-material-design.min.js"></script>
 </body>
 
 </html>
