--- a/table.html
+++ b/table.html
@@ -58,10 +58,10 @@
         padding-left: 5px;
         padding-top: 1px;
         padding-bottom: 0px;
-			}
-			.form-control {
-				background: none;
-			}
+      }
+      .form-control {
+        background: none;
+      }
     </style>
   </head>
 
@@ -81,22 +81,22 @@
         <div class="sidebar-wrapper" id="sidebar-wrapper">
           <ul class="nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#0">
+              <a class="nav-link" href="dashboard.html">
                 <i class="material-icons">dashboard</i>
                 <p>Dashboard</p>
               </a>
             </li>
             <!-- your sidebar here -->
             <li class="nav-item">
-              <a class="nav-link" href="new-form.html">
+              <a class="nav-link" href="adddefects.html">
                 <i class="material-icons">bug_report</i>
                 <p>Add Defect</p>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#0">
+              <a class="nav-link" href="table.html">
                 <i class="material-icons">account_box</i>
-                <p>Profile</p>
+                <p>Viewdefect</p>
               </a>
             </li>
           </ul>
@@ -189,240 +189,85 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>U001</td>
+                  <td>1</td>
                   <td>UI Login</td>
                   <td>Login error found</td>
-                  <td>Hari</td>
+                  <td>Main1</td>
                   <td>High</td>
                   <td>Medium</td>
                   <td>Functionality</td>
                   <td>
-                    <select class="browser-default custom-select" id="status-dropdown">
+                    <select
+                      class="browser-default custom-select"
+                      id="status-dropdown"
+                    >
                       <option selected>Select status</option>
                       <option value="Open">Open</option>
                       <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
+                      <option value="Rejected">Rejected</option>
+                      <option value="Deferred">Deferred</option>
+                      <option value="Re-opened">Re-opened</option>
                     </select>
                   </td>
                 </tr>
-                <tr>
-                  <td>F012</td>
-                  <td>Functionality</td>
-                  <td>Login function not working properly</td>
-                  <td>Mathan</td>
-                  <td>Medium</td>
-                  <td>High</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>P118</td>
-                  <td>Performance</td>
-                  <td>Loading performance is weak and slow</td>
-                  <td>Tyron</td>
-                  <td>Low</td>
-                  <td>Medium</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>U001</td>
-                  <td>UI Login</td>
-                  <td>Login error found</td>
-                  <td>Hari</td>
-                  <td>High</td>
-                  <td>Medium</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>F012</td>
-                  <td>Functionality</td>
-                  <td>Login function not working properly</td>
-                  <td>Mathan</td>
-                  <td>Medium</td>
-                  <td>High</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>P118</td>
-                  <td>Performance</td>
-                  <td>Loading performance is weak and slow</td>
-                  <td>Tyron</td>
-                  <td>Low</td>
-                  <td>Medium</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
-                <tr>
-                  <td>E051</td>
-                  <td>Enhancement</td>
-                  <td>Login successful popup</td>
-                  <td>Deluxan</td>
-                  <td>High</td>
-                  <td>Low</td>
-                  <td>Functionality</td>
-                  <td>
-										<select class="browser-default custom-select" id="status-dropdown">
-                      <option selected>Select status</option>
-                      <option value="Open">Open</option>
-                      <option value="Closed">Closed</option>
-											<option value="Rejected">Rejected</option>
-											<option value="Deferred">Deferred</option>
-											<option value="Re-opened">Re-opened</option>
-                    </select>
-									</td>
-                </tr>
               </tbody>
+              <tbody id="getresult"></tbody>
             </table>
           </div>
         </div>
       </div>
     </div>
+    <script>
+      var xhr = new XMLHttpRequest();
+      xhr.open("GET", "http://localhost:3000/defect", true);
 
+      console.log("sefa");
+      xhr.onload = function() {
+        //  const getval = { Priority };
+        if (this.status == 200) {
+          let details = JSON.parse(this.responseText);
+          // var details = JSON.parse(getval.responseText.map(rs => {
+          //     `${rs.Priority}`
+          // }));
+          var output = "";
+
+          for (var i in details) {
+            output +=
+              "<tr>" +
+              '<td scope="row">' +
+              details[i].id +
+              "</td>" +
+              "<td>" +
+              details[i].Module +
+              "</td>" +
+              "<td>" +
+              details[i].Description +
+              "</td>" +
+              "<td>" +
+              details[i].Assigned_To +
+              "</td>" +
+              "<td>" +
+              details[i].Severity +
+              "</td>" +
+              "<td>" +
+              details[i].Priority +
+              "</td>" +
+              "<td>" +
+              details[i].Defect_Type +
+              "</td>" +
+              "<td>" +
+              details[i].Status +
+              "</td>" +
+              "</tr>";
+          }
+
+          document.getElementById("getresult").innerHTML = output;
+        } else {
+          console.log("not connected");
+        }
+      };
+      xhr.send();
+    </script>
     <!-- SCRIPTS -->
     <!-- JQuery -->
     <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
